--- a/応募作品_杉山茉優/Sweets Manufacturer/ソースコード/Sweets_Manufacturer/Assembly-CSharp.csproj
+++ b/応募作品_杉山茉優/Sweets Manufacturer/ソースコード/Sweets_Manufacturer/Assembly-CSharp.csproj
@@ -8,7 +8,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <ProjectGuid>{649D999C-B839-E958-83EA-58132917784D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
